styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,900;1,300;1,400;1,500;1,600;1,700;1,900&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  /* Your default theme */
  --background: white;
  --foreground: #2b257e;
}

html[data-theme="dark"] {
  --background: #2b257e;
  --foreground: white;
}

@layer components {
  .container {
    @apply max-w-5xl;
  }
  .container-wide {
    @apply max-w-screen-2xl;
  }
  .container-copy {
    @apply max-w-3xl;
  }
  .container-narrow {
    @apply max-w-xl;
  }
  .ultratitle {
    @apply text-6xl font-bold lg:text-7xl xl:text-8xl;
  }
  .title {
    @apply text-5xl font-bold lg:text-6xl xl:text-7xl;
  }
  .subtitle {
    @apply mt-3 text-3xl lg:text-4xl;
  }
  .headline {
    @apply mt-3 mb-3 text-5xl;
  }
  .subheadline {
    @apply mt-0 mb-3 text-3xl;
  }
  .eyebrow {
    @apply mt-0 mb-2 text-2xl font-bold text-gray-400 lg:text-2xl;
  }
  .lead {
    @apply my-2 text-3xl lg:text-4xl lg:my-3;
  }
  .caption {
    @apply font-medium text-gray-400;
  }
  .btn {
    @apply p-2 px-4 bg-blue-300 rounded-md dark:bg-blue-500;
  }
  input {
    @apply px-3 py-1 bg-gray-300 rounded-lg dark:bg-gray-100;
  }
  p li {
    @apply text-lg;
  }
}

